<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_buildings"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/category_buildings" />

    <item
        android:id="@+id/navigation_nature"
        android:icon="@drawable/ic_local_florist"
        android:title="@string/category_nature" />

    <item
        android:id="@+id/navigation_food_and_drink"
        android:icon="@drawable/ic_local_bar"
        android:title="@string/category_food_and_drinks" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_people"
        android:title="@string/category_people" />

    <item
        android:id="@+id/navigation_technology"
        android:icon="@drawable/ic_phonelink"
        android:title="@string/category_technology" />

</menu>
